# stl_interfaces

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam  index.html
.github/workflows/: ci.yml
cmake/: dependencies.cmake
doc/: Jamfile.v2  examples.qbk  intro.qbk  iterator_facade.idx  iterator_facade.qbk  rationale.qbk  stl_interfaces.qbk  tutorial.qbk
doc/html/: BOOST_ITERATOR_FAC_idm3837.html  BOOST_ITERATOR_FAC_idm3841.html  BOOST_ITERATOR_FAC_idm3843.html  BOOST_ITERATOR_FAC_idm3844.html  BOOST_ITERATOR_FAC_idm3850.html  BOOST_ITERATOR_FAC_idm3852.html  BOOST_ITERATOR_FAC_idm3856.html  BOOST_ITERATOR_FAC_idm3858.html  BOOST_ITERATOR_FAC_idm3859.html  BOOST_ITERATOR_FAC_idm3925.html  BOOST_ITERATOR_FAC_idm3930.html  BOOST_ITERATOR_FAC_idm3940.html  BOOST_ITERATOR_FAC_idm3945.html  BOOST_STL_INTERFAC_idm8304.html  BOOST_STL_INTERFAC_idm8319.html  BOOST_STL_INTERFAC_idm8425.html  BOOST_STL_INTERFAC_idm8429.html  BOOST_STL_INTERFAC_idm8440.html  BOOST_STL_INTERFAC_idm8444.html  BOOST_STL_INTERFAC_idm8483.html  BOOST_STL_INTERFAC_idm8487.html  BOOST_STL_INTERFAC_idm8498.html  BOOST_STL_INTERFAC_idm8502.html  BOOST_STL_INTERFAC_idm9015.html  BOOST_STL_INTERFAC_idm9030.html  BOOST_STL_INTERFAC_idm9034.html  BOOST_STL_INTERFAC_idm9049.html  BOOST_STL_INTERFAC_idm9068.html  BOOST_STL_INTERFAC_idm9073.html  BOOST_STL_INTERFAC_idm9083.html  BOOST_STL_INTERFAC_idm9088.html  index.html  reference.html  standalone_HTML.manifest
doc/html/boost/iterator_facade/: access.html  iterator_facade.html  iterator_facade_De_idm1022.html  iterator_facade_De_idm1034.html  iterator_facade_De_idm1606.html  iterator_facade_De_idm1652.html  iterator_facade_De_idm1692.html  iterator_facade_De_idm1722.html  iterator_facade_De_idm1732.html  iterator_facade_De_idm1768.html  iterator_facade_De_idm1772.html  iterator_facade_De_idm1808.html  iterator_facade_De_idm1848.html  iterator_facade_De_idm1888.html  iterator_facade_De_idm3273.html  iterator_facade_De_idm3274.html  iterator_facade_De_idm3297.html  iterator_facade_De_idm3319.html  iterator_facade_De_idm3320.html  iterator_facade_De_idm3343.html  iterator_facade_De_idm3359.html  iterator_facade_De_idm3360.html  iterator_facade_De_idm3383.html  iterator_facade_De_idm3399.html  iterator_facade_De_idm3400.html  iterator_facade_De_idm3423.html  iterator_facade_De_idm3439.html  iterator_facade_De_idm3440.html  iterator_facade_De_idm3463.html  iterator_facade_De_idm3572.html  iterator_facade_De_idm3573.html  iterator_facade_De_idm3577.html  iterator_facade_De_idm3579.html  iterator_facade_De_idm3580.html  iterator_facade_De_idm3583.html  iterator_facade_De_idm3588.html  iterator_facade_De_idm3618.html  iterator_facade_De_idm3619.html  iterator_facade_De_idm3623.html  iterator_facade_De_idm3625.html  (+39 more)
doc/html/boost/stl_interfaces/: access.html  container_interface.html  element_layout.html  iterator_interface.html  make_reverse_iterator.html  operator___idm8108.html  operator___idm8112.html  operator___idm8134.html  operator___idm8138.html  operator___idm8168.html  operator___idm8170.html  operator___idm8194.html  operator___idm8196.html  operator___idm8318.html  operator___idm8322.html  operator___idm8339.html  operator___idm8343.html  operator___idm8355.html  operator___idm8359.html  operator___idm8376.html  operator___idm8380.html  operator___idm8383.html  operator___idm8387.html  operator___idm8397.html  operator___idm8401.html  operator___idm8411.html  operator___idm8413.html  operator___idm8415.html  operator___idm8417.html  operator___idm8441.html  operator___idm8445.html  operator___idm8469.html  operator___idm8473.html  (+21 more)
doc/html/boost_iteratorfacade__proposed_/: a_bit_of_background.html  examples.html  intro.html  introduction.html  rationale.html  tutorial.html
doc/html/boost_stlinterfaces/: examples.html  introduction.html  rationale.html  this_library_s_relationship_to_boost_iterator.html  tutorial___iterator_interface_.html  tutorial___reverse_iterator_.html  tutorial___sequence_container_interface_.html  tutorial___view_interface_.html
doc/html/boost_stlinterfaces__proposed_/: examples.html  introduction.html  rationale.html  the__v2__namespace.html  this_library_s_relationship_to_boost_iterator.html  tutorial___cont_iface_.html  tutorial___container_interface_.html  tutorial___iter_iface_.html  tutorial___iterator_interface_.html  tutorial___rev_iter_.html  tutorial___reverse_iterator_.html  tutorial___view_iface_.html  tutorial___view_interface_.html
doc/html/index/: s04.html  s05.html  s06.html
doc/html/iterator_facade/: compiler_support.html
doc/html/stl_interfaces/: compiler_support.html
example/: CMakeLists.txt  all_view.hpp  back_insert_iterator.cpp  drop_while_view.cpp  interoperability.cpp  node_iterator.cpp  random_access_iterator.cpp  repeated_chars_iterator.cpp  reverse_iterator.cpp  reverse_view.hpp  static_vector.cpp  static_vector.hpp  take_view.hpp  zip_proxy_iterator.cpp
include/boost/iterator_facade/: container_interface.hpp  fwd.hpp  iterator_facade.hpp  view_interface.hpp
include/boost/stl_interfaces/: config.hpp  container_interface.hpp  fwd.hpp  iterator_interface.hpp  reverse_iterator.hpp  sequence_container_interface.hpp  view_adaptor.hpp  view_interface.hpp
meta/: libraries.json
test/: CMakeLists.txt  Jamfile.v2  array.cpp  bidirectional.cpp  compile_sfinae_path_mutable_iterator.cpp  detail.cpp  forward.cpp  ill_formed.hpp  input.cpp  output.cpp  random_access.cpp  reverse_iter.cpp  static_vec.cpp  static_vec_noncopyable.cpp  v2_array.cpp  v2_bidirectional.cpp  v2_forward.cpp  v2_input.cpp  v2_output.cpp  v2_random_access.cpp  v2_static_vec.cpp  v2_static_vec_noncopyable.cpp  view_adaptor.cpp  view_tests.hpp
(+139 files in other folders)
